--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "quill-image-resize-module-react": "^3.0.0",
