--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-quill": "^2.0.0",
-    "react-toastify": "^10.0.5"
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^8",
