--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
     "next": "14.2.5",
