--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXTAUTH_SECRET = dmbfajkfkashjdkjahd
 NEXTAUTH_URL = http://localhost:3000/
+NEXT_PUBLIC_BACKEND_URL=https://blogs-23vc.onrender.com
