--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
+    "quill": "^2.0.2",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
